Bug 387301 - conditional expression is constant warnings for XYSmoothCurveDock.cpp
Summary: conditional expression is constant warnings for XYSmoothCurveDock.cpp
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-25 15:23 UTC by uwestoehr
Modified: 2017-11-25 22:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-25 15:23:45 UTC
I get:

1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYSmoothCurveDock.cpp(157): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYSmoothCurveDock.cpp(233): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYSmoothCurveDock.cpp(293): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYSmoothCurveDock.cpp(308): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYSmoothCurveDock.cpp(340): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYSmoothCurveDock.cpp(601): warning C4458: declaration of 'data' hides class member
Comment 1 Alexander Semke 2017-11-25 22:02:52 UTC
Git commit 4bcbe591e22e33cafd97f5e61f94546521050d9b by Alexander Semke.
Committed on 25/11/2017 at 22:02.
Pushed by asemke into branch 'master'.

Removed couple of MSVC warnings in XYSmoothCurveDock.cpp.
FIXED-IN: 2.5

M  +12   -30   src/kdefrontend/dockwidgets/XYSmoothCurveDock.cpp

https://commits.kde.org/labplot/4bcbe591e22e33cafd97f5e61f94546521050d9b