Removed couple of MSVC warnings in XYSmoothCurveDock.cpp.

BUG: 387301
FIXED-IN: 2.5